3.0.4
* Fix for Unwatched number being off center in Banner View for TVShows
* added new view for movies only SiO2-X (requires disc art & logo)
* Fix for misplaced Title on ADDONS & MUSIC Icon View
* SeekBar can be controlled via Mouse during playback
* Fixed wrong label in PVR side menu "Sort Order"
* Playlist Editor Restyling
* Fixed PartyPlaylist view
* New Sounds

3.0.3
* Context Menu changes (file browsing jump disabled for now)
* Added setting to disable VideoHelp Icon from homepage
* Spotify Icons Added - (thanks to rridder)
* Quit Icon now shows choice made in settings (icon and name change according to selection)
* Fix to sio2 view
* HEVC - H265 icon added

3.0.2
* Hotfix for Sources Dialog

3.0.1
* Black Theme now default
* openELEC setting configuration now integrated
* minor cosmetics

3.0.0
* Helix Support
* New Shelf ways - Addons now automatically filled from video-music-program-pictures
* New Slider on HomeScreen
* No more Programs Icon on Home

2.1.7
* Cosmetic Fixes
* Fix for selected color in skin
* Introduction of VideoGuides in settings (still alpha)
* drop Skin.Widgets and switched to library.data.provider (few changes on shelf display)

2.1.6
* Fixes

2.1.5
* Now Possible to hide settings (forces quit icon to SHOW MENU and it's then possible to enter settings from there)
* Cosmetic Fixes
* Fix a bug where hiding clock would hide internet connection from Home

2.1.4
* smaller clock in windows
* Headings cosmetics

2.1.3
* Revamped Icon Wall view all over now showing fanart
* Code Cleaning
* Fixes for black theme
* Fix for addons sio2 view

2.1.2
* Extended and improved Iconview
* Some Code Cleanup.
* Introduction of Black Theme
* fixes here and there

2.1.1
* Fixes for broken EPG

2.1.0
* Added Option to show Apple trailers Folders on shelf as a 3rd option >Recent >InProgress >Trailers
* Fix for selection color in subtitles Dialog
* Fix for scrollbar not selectable in Banner TVShow view

2.0.10