@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <window id="132">
     <defaultcontrol always="true">20</defaultcontrol>
-    <allowoverlay>no</allowoverlay>
+    <!--<allowoverlay>no</allowoverlay>-->
     <backgroundcolor>background</backgroundcolor>
     <include>DialogOpenCloseVisible</include>
     <controls>
